--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,3 @@
-
 /* 
 
     You can write your own styles here...
@@ -10,3 +9,12 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.button1 {
+    visibility: hidden;
+    max-height: 40px;
+    
+}
+
+li:hover > .button1 {
+    visibility: visible;
+};
